<resources>
    <string name="app_name">Breaker Temca App</string>
    <string name="app_name2">Temca Application</string>
    <string name="title_power_cable">Power Cable</string>
    <string name="title_conduit">Conduits</string>

<!--  Power Cable  -->
    <string name="txt_search_cable_title"><b>Search cable size</b></string>
    <string name="txt_breaker_size">Breaker Size: </string>
    <string name="txt_breaker_size_unit">A</string>
    <string name="txt_setup_form">Setup Form: </string>
    <string name="txt_cable_type">Cable Type</string>
    <string name="txt_cable_size">Cable Size</string>
    <string name="txt_maximum_load">Maximum Load</string>
    <string name="txt_conduit_size">Conduit Size: </string>
    <string name="txt_electric_rail">Electric Rail: </string>

    <!-- Spinner Setup Form -->
    <string-array name="setup_form_lists">
        <item>Select a setup form</item>
        <item>Bangkok ?</item>
        <item>London ?</item>
    </string-array>


<!--  Conduit  -->
    <string name="txt_conduit_search_title"><b>Search conduit size</b></string>
    <string name="txt_amount">Amount</string>
    <string name="txt_conduit_size_suitable">Suitable conduit size: </string>
    <string name="txt_rail_size_suitable">Suitable rail size: </string>
    <string name="to_add_1_recyclerview_per_click">to add 1 recyclerview per click</string>
    <string name="toaddconduitlists">toAddConduitLists</string>
    <string name="conduitlisttitle">ConduitListTitle</string>
    <string name="kode">kode</string>
    <string name="kategori">kategori</string>
    <string name="isi">isi</string>
</resources>