<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.conduit.ConduitFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#C7E1FF"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/txt_conduit_search_title"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="40dp"
                        android:paddingEnd="0dp"
                        app:alignmentMode="alignMargins"
                        app:columnCount="3"
                        app:orientation="horizontal"
                        app:rowCount="1">

                        <TextView
                            android:id="@+id/txtBreakerSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/txt_cable_type"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txtCableSizeConduit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:text="@string/txt_cable_size"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/cableAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/txt_amount"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </androidx.gridlayout.widget.GridLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvConduitLists"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addConduitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:src="@drawable/ic_baseline_add_24"
                    android:focusable="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="300dp"
                    android:onClick="insertCardConduitCal"
                    android:contentDescription="@string/toaddconduitlists" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:cardBackgroundColor="#C5C5C5"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="0dp"
                                android:text="@string/txt_conduit_size_suitable"
                                android:textAlignment="textEnd"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtViewConduitSize"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/rounded_edittxt"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="number"
                                android:paddingStart="15dp"
                                android:paddingEnd="0dp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="0dp"
                                android:text="@string/txt_rail_size_suitable"
                                android:textAlignment="textEnd"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtViewElectricRailSize"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/rounded_edittxt"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="number"
                                android:paddingStart="15dp"
                                android:paddingEnd="0dp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>