<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.power_cable.PowerCableFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="#C7E1FF"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSearchTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/txt_setup_form"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtBreakerSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/txt_breaker_size"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editNumberBreakerSize"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="15dp"
                        android:background="@drawable/rounded_edittxt"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/unitBreakerSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/txt_breaker_size_unit"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtSetupForm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/txt_setup_form"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/spinnerQuestionReset"
                        android:layout_height="50dp"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/rounded_edittxt"
                        android:entries="@array/setup_form_lists"/>

                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:cardBackgroundColor="#C5C5C5"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="12.5dp"
                            android:paddingEnd="12.5dp">

                            <LinearLayout
                                android:id="@+id/linearLayoutCableType"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txtCableType"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/txt_cable_type"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/txtViewCableType"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/rounded_edittxt"
                                    android:cursorVisible="false"
                                    android:focusable="false"
                                    android:paddingLeft="15dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/linearLayoutCableSize"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txtCableSize"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/txt_cable_size"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/txtViewCableSize"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/rounded_edittxt"
                                    android:cursorVisible="false"
                                    android:focusable="false"
                                    android:paddingLeft="15dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/linearLayoutMaxLoad"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txtMaxLoad"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/txt_maximum_load"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/txtViewMaxLoad"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/rounded_edittxt"
                                    android:cursorVisible="false"
                                    android:focusable="false"
                                    android:paddingStart="15dp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_conduit_size"
                                android:layout_gravity="center"
                                android:paddingStart="10dp"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtViewConduitSize"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/rounded_edittxt"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="number"
                                android:paddingStart="15dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_electric_rail"
                                android:layout_gravity="center"
                                android:paddingStart="10dp"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtViewElectricRailSize"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/rounded_edittxt"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="number"
                                android:paddingStart="30dp" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>



        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>